hphp/test/zend/bad/ext-standard-file/bug41874_3.php
<?php
system('cd 1:\\non_existant; dir nonexistant');
?>